add gripper config file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ add_subdirectory(dependencies/gpg libgpg)
 set(PYBIND11_PYTHON_VERSION 3)
 add_subdirectory(dependencies/pybind11)
 pybind11_add_module(pygpg MODULE src/py_generate_grasp_from_gpg.cpp)
-target_link_libraries(pygpg PRIVATE gpg_grasp_candidates_generator)
+target_link_libraries(pygpg PRIVATE gpg_grasp_candidates_generator gpg_config_file)
