add grasp candidate max num option

--- a/gripper_params.cfg
+++ b/gripper_params.cfg
@@ -4,8 +4,10 @@
 #   hand_depth: the finger length (measured from hand base to finger tip)
 #   hand_height: the height of the hand
 #   init_bite: the minimum distance between the fingertip and the side of the object that is oriented toward the hand
+#   max_grasp_num: maximum number of output grasps, if the value set to 0, then output all grasp candidates
 finger_width = 0.01
 hand_outer_diameter = 0.12
 hand_depth = 0.06
 hand_height = 0.02
 init_bite = 0.01
+max_grasp_num = 0
